# quant_research_system

./: .env.example  .gitignore  API_PAGINATION.md  CLAUDE.md  DOCUMENTATION.md  POSTGRESQL_MIGRATION.md  README.md  STARTUP_GUIDE.md  SYNC_IMPROVEMENTS.md  TODO.md  check_status.sh  db_manager.py  docker-compose.yml  migrate_data.py  pyproject.toml  setup.sh  setup_docker_mirror.sh  start.sh  start_backend.sh  stop.sh
backend/: health_check.py  init_database.py  requirements.txt
backend/app/: main.py
backend/app/core/: cache_invalidator.py  config.py  constants.py  container.py  logger.py  (+3 more)
backend/data_manager/: config_sync_engine.py  dag_config.json  dag_executor.py  processor.py  refactored_sync_engine.py  scheduler.py  schema_generator.py  sync_components.py  sync_config.json  sync_task.py  task_config_template.json
backend/database/: init.sql  init_dolphindb.dos  init_dolphindb.py
backend/flows/: __init__.py  data_sync_flow.py  dynamic_flow.py  serve.py
backend/ml_module/: optimizer.py  pipeline.py  trainer.py
backend/store/: dolphindb_client.py  file_storage.py  partition_manager.py  postgres_client.py  redis_client.py
backend/tests/: test_dolphindb_utils.py  test_flow_parser.py  test_technical_factors.py
config/: scripts.config.sh
config/flows/: daily-sync.yaml  weekly-analysis.yaml
docker/: docker-compose.yml
docs/: BUG_REPORT.md  PERFORMANCE.md  PROJECT_FEATURES.md  REFACTORING.md
docs/plans/: 2026-02-26-scheduler-center-design.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
(+61 files in other folders)
