[project]
name = "quant-research-system"
version = "2.0.0"
description = "全栈量化交易研究平台"
requires-python = ">=3.11,<3.12"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
